# snapWriteScraper

./: .gitignore  README.md  main.py  pyproject.toml  test_user_agent.py
scrapers/: __init__.py  bestBuy.py
utils/: delayUtils.py  geminiLLMService.py  llmFunctions.py  userAgentRotation.py
